# Wellenprogramm

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.markdown  SConstruct  build_config.py  build_support.py  plot.sh
helper/: set_dong_variables.sh
lattice/: SConscript  ark45ip_lattice_integrator.h  cluster_counter.cpp  cluster_counter.h  cluster_counter.os  easy_lattice_model.h  fftw3_wrapper.cpp  fftw3_wrapper.h  fftw3_wrapper.os  finite_interval_lattice_integrator.cpp  finite_interval_lattice_integrator.h  lattice.cpp  lattice.h  lattice_geometry.h  lattice_integrator.cpp  lattice_integrator.h  lattice_interface.h  lattice_plugin_registration.cpp  lattice_plugin_registration.h  lattice_plugin_registration.os  lattice_server.h  noise_generator.cpp  noise_generator.h  noise_generator.os  noise_lattice.cpp  noise_lattice.h  noise_lattice.os  ou_noise_generator.cpp  ou_noise_generator.h  plugin.cpp  plugin.h  plugin_kernel.h  rds_definitions.h  rds_helper.cpp  rds_helper.h  rds_helper.os  rds_lattice.h  rk4ip_lattice_integrator.h  si_lattice_integrator.h  siip_lattice_integrator.cpp  (+3 more)
models/: SConscript  barkley_lattice.cpp  barkley_lattice.h  bistable_lattice.h  brusselator_lattice.cpp  easy_lattice.cpp  fhn_lattice.cpp  fhn_lattice.h  fhn_original_lattice.cpp  fhn_original_lattice.h  fhnk_lattice.cpp  fhnk_lattice.h  ginzburg_landau_lattice.h  hodgkin_huxley_lattice.h  lattice_models.cpp  lattice_models.h  oregonator_lattice.h  scott_lattice.h
share/progressbar/: progressbar.h
src/: CMakeLists.txt  SConscript  modeltest.cpp
src/lattice/: .SConscript.swp  ark45ip_lattice_integrator.h  cluster_counter.cpp  cluster_counter.h  easy_lattice_model.h  fftw3_wrapper.cpp  fftw3_wrapper.h  finite_interval_lattice_integrator.cpp  finite_interval_lattice_integrator.h  lattice.cpp  lattice.h  lattice_geometry.h  lattice_integrator.h  lattice_interface.h  lattice_plugin_registration.cpp  lattice_plugin_registration.h  lattice_server.h  noise_generator.cpp  noise_generator.h  noise_lattice.cpp  noise_lattice.h  ou_noise_generator.cpp  ou_noise_generator.h  plugin.cpp  plugin.h  plugin_kernel.h  rds_definitions.h  rds_helper.cpp  rds_helper.h  rds_lattice.h  rk4ip_lattice_integrator.h  si_lattice_integrator.h  siip_lattice_integrator.cpp  siip_lattice_integrator.h  singleton_helper.h  ~lattice_integrator-temp.h
src/models/: .SConscript.swp  .sconsign.dblite  CMakeLists.txt  SConscript  barkley_lattice.cpp  barkley_lattice.h  bistable_lattice.cpp  bistable_lattice.h  brusselator_lattice.cpp  brusselator_lattice.h  easy_lattice.cpp  fhn_additional_lattice.cpp  fhn_additional_lattice.h  fhn_lattice.cpp  fhn_lattice.h  fhn_original_lattice.cpp  fhn_original_lattice.h  fhnk_lattice.cpp  fhnk_lattice.h  ginzburg_landau_lattice.cpp  ginzburg_landau_lattice.h  hodgkin_huxley_lattice.cpp  hodgkin_huxley_lattice.h  lattice_models.cpp  lattice_models.h  oregonator_lattice.cpp  oregonator_lattice.h  piecewise_linear_lattice.h  scott_lattice.h
src/models/.sconf_temp/: conftest_1
src/share/progressbar/: progressbar.cpp  progressbar.h
src/src/: SConscript  modeltest.cpp  speedtest.cpp
src/tools/: indentstyle
src/tools/gnuplot_i++/: SConscript  example.cc
src/ui/: .SConscript.swp  CMakeLists.txt  color_map_adaptation.cpp  color_map_adaptation.h  color_maps.cpp  color_maps.h  configuration.cpp  configuration.h  defects_editor.cpp  defects_editor.h  export_preferences.cpp  export_preferences.h  lattice_controller.cpp  lattice_controller.h  lattice_scripter.cpp  lattice_scripter.h  option.cpp  option.h  parameter_dock_widget.cpp  parameter_dock_widget.h  plot.cpp  plot_global.cpp  plot_layer.cpp  plot_layer.h  plot_single.cpp  plot_single.h  plot_single.ui  plot_view.cpp  plot_view.h  plotwindow_2d.cpp  plotwindow_2d.h  plotwindow_2d.ui  resources.qrc  script_editor.cpp  script_editor.h  script_editor.ui  simulation_dock_widget.ui  slice_plot.h  spectrogram_data.h  tiny_double_edit.cpp  (+1 more)
src/ui/extensions/: check_box_matrix.cpp  check_box_matrix.h  detachable_tab_widget.cpp  detachable_tab_widget.h  diffusion_spin_box.cpp  diffusion_spin_box.h  parameter_spin_box.cpp  parameter_spin_box.h  preference_pager.cpp  preference_pager.h  resetable_label.cpp  resetable_label.h  rightclickable_tool_bar.cpp  rightclickable_tool_bar.h  simple_curve_data.cpp  simple_curve_data.h  simple_plot_label.cpp  simple_plot_label.h
tools/getpot-c++/: GetPot
ui/: SConscript  SConscript_alt  color_map_adaptation.cpp  color_map_adaptation.h  color_maps.cpp  color_maps.h  colour_map_adaptation.h  colour_maps.h  configuration.cpp  configuration.h  defects_editor.cpp  defects_editor.h  defects_editor.ui  detachable_tab_widget.h  diffusion_spin_box.cpp  export_preferences.cpp  export_preferences.h  lattice_controller.cpp  lattice_controller.h  lattice_scripter.cpp  lattice_scripter.h  main_window.cpp  main_window.h  main_window.ui  option.cpp  option.h  parameter_dock_widget.cpp  parameter_dock_widget.h  parameter_spin_box.cpp  parameter_spin_box.h  plot.cpp  plot_global.h  plot_layer.cpp  plot_layer.h  plot_single.cpp  plot_single.h  plot_single.ui  plot_view.cpp  plot_view.h  plotwindow_2d.cpp  (+23 more)
ui/extensions/: check_box_matrix.cpp  check_box_matrix.h  detachable_tab_widget.cpp  diffusion_spin_box.h  parameter_spin_box.cpp  preference_pager.cpp  preference_pager.h  resetable_label.cpp  resetable_label.h  rightclickable_tool_bar.cpp  simple_curve_data.cpp  simple_curve_data.h  simple_plot_label.cpp  simple_plot_label.h
