CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT(Wellenprogramm)

FIND_PACKAGE( Boost REQUIRED
    COMPONENTS thread system
  )

INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

# SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11" )

SET( CMAKE_CXX_FLAGS_RELEASE "-DBOOST_THREADS=4 -O3" )

SET( CMAKE_CXX_FLAGS_DEBUG "-g -ggdb" )

ADD_SUBDIRECTORY(src)

